# Proyecto-1--Estructuras_Datos

./: .gitignore  Articulos.txt  Clientes.txt  Pedidos.txt
Pedidos/: Pedido1.txt  Pedido2.txt  Pedido3.txt  Pedido4.txt  pedido.txt  pedido1.txt  pedido2.txt
Proyecto1_ED/: Alistadores.h  AsignarPedidoThread.h  Auxiliares.h  BalanceadorDecisiones.h  BodegaAlisto_Alistadores.h  CMakeLists.txt  CMakeLists.txt.user.389e72d  CMakeLists.txt.user.e870012  CargarClientesMemoria.h  ColaAlistados.h  ColaDeAlisto.h  ColaFabricas.h  ColaFacturacion.h  Fabricas.h  FabricasProductos.h  GenerarFacturasThread.h  HiloPedidos.h  HiloPedidos.h.autosave  LeerPedidosClientes.h  SubirAMemoriaArticulos.h  Tiempo2.h  alistadores.h  articulo.cpp  articulo.h  articulos.h  articulos.h.autosave  auxiliaries.h  calcularTiempo.cpp  calcularTiempo.h  colaPedidos.h  includes.h  isInt.cpp  main.cpp  main1.cpp  pedidos.h  proyecto_ed.cpp  proyecto_ed.h  proyecto_ed.ui  timeStamp.cpp  timeStamp.h  (+1 more)
build-Proyecto1_ED-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Proyecto1_ED-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Proyecto1_ED-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/Proyecto1_ED_autogen/: deps  moc_predefs.h
build-Proyecto1_ED-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/Proyecto1_ED_autogen/EWIEGA46WW/: moc_proyecto_ed.cpp  moc_proyecto_ed.cpp.d
build-Proyecto1_ED-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/Proyecto1_ED_autogen/include/: ui_proyecto_ed.h
build-Proyecto1_ED-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Proyecto1_ED-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-Proyecto1_ED-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-Proyecto1_ED-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Proyecto1_ED_autogen/: deps  mocs_compilation.cpp
build-Proyecto1_ED-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Proyecto1_ED_autogen/EWIEGA46WW/: moc_proyecto_ed.cpp  moc_proyecto_ed.cpp.d
build-Proyecto1_ED-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/Proyecto1_ED_autogen/include/: ui_proyecto_ed.h
malos/: Pedido1.txt  Pedido2 - copia.txt  Pedido2.txt  Pedido3.txt  Pedido4.txt  pedido.txt
(+86 files in other folders)
